force-app/main/default/objects/Location/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Customer account that owns this service location.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Locations</relationshipLabel>
    <relationshipName>Service_Locations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>