force-app/main/default/objects/Location/fields/Audit_Radius_Meters__c.field-meta.xml
<CustomField>
    <fullName>Audit_Radius_Meters__c</fullName>
    <description>Optional Location-specific geofence radius. When blank, the default radius from Asset Audit Settings is used.</description>
    <label>Audit Radius Meters</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>