force-app/main/default/objects/Location/fields/ERP_Anomaly_Email__c.field-meta.xml
<CustomField>
    <fullName>ERP_Anomaly_Email__c</fullName>
    <description>Email address that receives asset anomaly reports for this service location. The org-level audit setting is used when blank.</description>
    <label>ERP Anomaly Email</label>
    <type>Email</type>
</CustomField>