force-app/main/default/objects/Location/fields/Geo_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>Geo_Coordinates__c</fullName>
    <description>Stored latitude and longitude used to verify that mobile asset audits are performed at this Location.</description>
    <label>Geo Coordinates</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>